welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: type mismatch;
 found   : java.awt.Color
 required: String
    T=T+(getCouleurSol)
         ^